# hamal_ws

./: .gitignore  .gitmodules  README.md  ayosb_st.pgm
diff_drive_controller_hamal/: CMakeLists.txt  diff_drive_controller_hamal_plugins.xml  package.xml
diff_drive_controller_hamal/cfg/: DiffDriveControllerHamal.cfg  DiffDriveControllerHamal.cfg.py
diff_drive_controller_hamal/include/diff_drive_controller_hamal/: diff_drive_controller.h  odometry.h  speed_limiter.h
diff_drive_controller_hamal/src/: diff_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
hamal_bringup/: CMakeLists.txt  package.xml
hamal_bringup/launch/: autonomous_startup.launch  hamal_bare_startup.launch  hamal_bringup.launch  hamal_manual.launch
hamal_bringup/scripts/: set_env.sh  startup_upstart.py
hamal_control/: CMakeLists.txt  hamal_lifter_controller_plugins.xml  package.xml
hamal_control/cfg/: MotionController.cfg
hamal_control/config/: hamal_control.yaml  profile_controller_params.yaml
hamal_control/include/hamal_control/: lifter_controller.hpp  lifter_trajectory_generator.hpp  orientation_test.hpp
hamal_control/include/hamal_control/motion_controller/: motion_controller.hpp
hamal_control/include/hamal_control/motion_profiles/: trapezoidal_profile.hpp
hamal_control/include/hamal_control/velocity_smoother/include/velocity_smoother/: velocity_smoother.hpp
hamal_control/launch/: hamal_control.launch  hamal_profile_controllers.launch  motion_profile_controller.launch
hamal_control/src/: lifter_controller.cpp  lifter_trajectory_generator.cpp  motion_controller.cpp  orientation_test.cpp  trapezoid_move.cpp
hamal_control/src/velocity_smoother/src/: velocity_smoother.cpp
hamal_custom_interfaces/: CMakeLists.txt  package.xml
hamal_custom_interfaces/action/: HomingOperation.action  LifterOperation.action  MotionProfileOperation.action
hamal_custom_interfaces/msg/: BmsStatus.msg  HardwareInfo.msg  HardwareInfoArray.msg  HardwareStatus.msg  HomingInfo.msg  ImuTestDebugInfo.msg  LifterCommand.msg  ManualMoveCommand.msg  MotionProfileCommand.msg  MotionReference.msg  ProfileCommand.msg  SpeedLimitRatio.msg
hamal_custom_interfaces/srv/: ChangeRobotMode.srv  EmergencyStop.srv  GetRobotMode.srv
hamal_description/: CMakeLists.txt  package.xml
hamal_description/launch/: display.launch
hamal_description/mesh/: bottom_part.stl  front_buggy_link.stl  logos_maxi_base.stl  mid_wheel.stl  nanoscan.stl  rear_left_buggy.stl  rear_right_buggy.stl  rear_right_buggy_eski.stl  top_part.stl  wheel.stl
hamal_description/rviz/: hamal_rviz.rviz
hamal_description/urdf/: common_properties.xacro  hamal.urdf.xacro  hamal_simple.urdf.xacro  lifter.urdf.xacro  moobot.urdf.xacro
hamal_diff_drive_controller/: CMakeLists.txt  hamal_diff_drive_controller.xml  hamal_diff_drive_controller_plugins.xml  package.xml
hamal_diff_drive_controller/cfg/: HamalDiffDriveController.cfg
hamal_diff_drive_controller/include/hamal_diff_drive_controller/: defs.hpp  hamal_diff_drive_controller.hpp  limiter.hpp  odometry.hpp
hamal_diff_drive_controller/src/: hamal_diff_drive_controller.cpp  limiter.cpp  odometry.cpp
hamal_hardware/: CMakeLists.txt  package.xml
hamal_hardware/config/: ethercat_config.yaml  hamal_config.yaml  hamal_hardware_config.yaml  lifter_config.yaml
hamal_hardware/include/hamal_hardware/: ethercat_controller.hpp  hamal_hardware_defs.hpp  hamal_hardware_interface.hpp  homing_helper.hpp  lifter_hwi.hpp  rpm_limiter.hpp
hamal_hardware/launch/: hamal_hardware.launch
hamal_hardware/scripts/: bms_node.py
hamal_hardware/src/: ethercat_controller.cpp  hamal_hardware_interface.cpp  homing_helper.cpp  lifter_hwi.cpp  rate_test.cpp  rpm_limiter.cpp
hamal_led_controller/: CMakeLists.txt  package.xml
hamal_led_controller/msg/: Led.msg
hamal_led_controller/src/: led_controller.cpp
hamal_lifter_controller/: CMakeLists.txt  hamal_lifter_controller_plugins.xml  package.xml
hamal_lifter_controller/include/hamal_lifter_controller/: controllers.hpp  hamal_lifter_controller.hpp  lifter_controller.hpp
hamal_lifter_controller/src/: controllers.cpp  hamal_lifter_controller.cpp  lifter_controller.cpp
hamal_localization/: CMakeLists.txt  package.xml
hamal_localization/config/: pos_saver_config.yaml  rl_ekf.yaml
hamal_localization/include/hamal_localization/: position_saver.hpp
hamal_localization/launch/: localization.launch
hamal_localization/pos_logs/: pos_log.yaml
hamal_localization/src/: position_saver.cpp
hamal_mapping/: CMakeLists.txt  package.xml
hamal_mapping/config/: sbox_lifelong.yaml  sbox_localization.yaml  sbox_offline.yaml  sbox_online_async.yaml  sbox_online_sync.yaml
hamal_mapping/launch/: amr_mapping.launch  gmapping.launch  hector_mapping.launch  scanners.launch  slam_toolbox.launch
hamal_mapping/maps/: altinay_test.pgm  altinay_test.yaml  ayosb_test.pgm  ayosb_test.yaml  fuar.data  fuar.pgm  fuar.yaml
hamal_navigation/: CMakeLists.txt  package.xml
hamal_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
hamal_utils/: CMakeLists.txt  package.xml
hamal_utils/include/hamal_utils/: connection_checker.hpp  costmap_cleaning.hpp  dynamic_speed_limiter.hpp  emg_stop_client.hpp  emg_stop_gui.hpp  lifter_client.hpp
hamal_utils/launch/: joy_control.launch
hamal_utils/scripts/service/: hamal_startup.sh
hamal_utils/src/: connection_checker.cpp  costmap_cleaning.cpp  dynamic_speed_limiter.cpp  emg_stop_client.cpp  emg_stop_gui.cpp  emg_stop_node.cpp  imu_test.cpp  lifter_client.cpp  robot_mode_node.cpp
hamal_velocity_multiplexer/: CMakeLists.txt  package.xml
hamal_velocity_multiplexer/config/: sub_info.yaml
hamal_velocity_multiplexer/include/hamal_velocity_multiplexer/: velocity_multiplexer.hpp
hamal_velocity_multiplexer/launch/: hamal_velocity_multiplexer.launch
hamal_velocity_multiplexer/src/: velocity_multiplexer.cpp
(+3 files in other folders)
