<?xml version="1.0"?>
<package format="2">
  <name>hamal_control</name>
  <version>0.0.0</version>
  <description>The hamal_control package</description>
  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <!-- <build_depend>diff_drive_controller_hamal</build_depend> -->
  <build_depend>hamal_lifter_controller</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <!-- <build_export_depend>diff_drive_controller_hamal</build_export_depend> -->
  <build_export_depend>hamal_lifter_controller</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>diff_drive_controller_hamal</exec_depend> -->
  <exec_depend>hamal_lifter_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <exec_depend>tf2_geometry_mexec_depends</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  
  <build_depend>hamal_custom_interfaces</build_depend>
  <exec_depend>hamal_custom_interfaces</exec_depend>
  <export>


  </export>
</package>
