<?xml version="1.0"?>
<package format="2">
  <name>hamal_custom_interfaces</name>
  <version>0.0.0</version>
  <description>The hamal_custom_interfaces package</description>
  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
