<?xml version="1.0"?>
<package format="2">
  <name>hamal_diff_drive_controller</name>
  <version>0.0.0</version>
  <description>The hamal_diff_drive_controller package</description>
  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>

  <build_depend>pluginlib</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/hamal_diff_drive_controller_plugins.xml"></controller_interface>
  </export>
</package>
