<?xml version="1.0"?>
<package format="2">
  <name>hamal_hardware</name>
  <version>0.0.0</version>
  <description>The hamal_hardware package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="naci@todo.todo">naci</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>hardware_interface</build_depend>
  <exec_depend>hardware_interface</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>controller_manager</build_depend>
  <exec_depend>controller_manager</exec_depend>

  <build_depend>ethercat_interface_lib</build_depend>
  <exec_depend>ethercat_interface_lib</exec_depend>

  <build_depend>etherlab</build_depend>
  <exec_depend>etherlab</exec_depend>

  <build_depend>class_loader</build_depend>
  <exec_depend>class_loader</exec_depend>

  <build_depend>diff_drive_controller</build_depend>
  <exec_depend>diff_drive_controller</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
