<?xml version="1.0"?>
<package format="2">
  <name>hamal_utils</name>
  <version>0.0.0</version>
  <description>The hamal_utils package</description>

  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>diff_drive_controller_hamal</depend>
  <depend>teb_local_planner</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hamal_custom_interfaces</depend>

  <export>

  </export>
</package>
